split the /account/info method into /private and /public
